Added like,image upload and chat feature